<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Guess">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/pickBox"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imageB1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/preGuessColor"
                android:contentDescription="@string/imageB1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_spiral_line2"
                tools:layout_editor_absoluteX="83dp" />

            <ImageButton
                android:id="@+id/imageB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/preGuessColor"
                android:contentDescription="@string/imageB2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_spiral_line2"
                tools:layout_editor_absoluteX="83dp" />

            <ImageButton
                android:id="@+id/imageB3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/preGuessColor"
                android:contentDescription="@string/imageB3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_spiral_line2"
                tools:layout_editor_absoluteX="83dp" />

            <ImageButton
                android:id="@+id/imageB4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/preGuessColor"
                android:contentDescription="@string/imageB4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_spiral_line2"
                tools:layout_editor_absoluteX="83dp" />

            <ImageButton
                android:id="@+id/imageB5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/preGuessColor"
                android:contentDescription="@string/imageB5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_spiral_line2"
                tools:layout_editor_absoluteX="83dp" />

            <ImageButton
                android:id="@+id/imageB6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/preGuessColor"
                android:contentDescription="@string/imageB6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_spiral_line2"
                tools:layout_editor_absoluteX="83dp" />

            <ImageButton
                android:id="@+id/imageB7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/preGuessColor"
                android:contentDescription="@string/imageB7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_spiral_line2"
                tools:layout_editor_absoluteX="83dp" />

            <ImageButton
                android:id="@+id/imageB8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/preGuessColor"
                android:contentDescription="@string/imageB8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_spiral_line2"
                tools:layout_editor_absoluteX="83dp" />

            <ImageButton
                android:id="@+id/imageB9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/preGuessColor"
                android:contentDescription="@string/imageB9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_spiral_line2"
                tools:layout_editor_absoluteX="83dp" />

            <ImageButton
                android:id="@+id/imageBA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/preGuessColor"
                android:contentDescription="@string/imageBA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.256"
                app:srcCompat="@drawable/ic_spiral_line2"
                tools:layout_editor_absoluteX="200dp" />


        </LinearLayout>


    </HorizontalScrollView>

    <TextView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/history"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/colorcodeNear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/nearColor"
            android:text="@string/nearColor" />

        <TextView
            android:id="@+id/colorcodeFar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/farColor"
            android:text="@string/farColor" />

        <TextView
            android:id="@+id/colorcodeOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:text="@string/outOfRange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/yourGuess"
            android:layout_width="8dp"
            android:layout_height="34dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/preGuessColor"
            android:text="@string/yourGuess" />

        <ImageView
            android:id="@+id/yourColor"
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView0"
            app:srcCompat="@drawable/ic_spiral_line2" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/historyView0"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView0"
            app:srcCompat="@drawable/ic_spiral_line2" />

        <ImageView
            android:id="@+id/historyView1"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView1"
            app:srcCompat="@drawable/ic_spiral_line2" />

        <ImageView
            android:id="@+id/historyView2"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView2"
            app:srcCompat="@drawable/ic_spiral_line2" />

        <ImageView
            android:id="@+id/historyView3"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView3"
            app:srcCompat="@drawable/ic_spiral_line2" />

        <ImageView
            android:id="@+id/historyView4"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView4"
            app:srcCompat="@drawable/ic_spiral_line2" />
        <ImageView
            android:id="@+id/historyView5"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView5"
            app:srcCompat="@drawable/ic_spiral_line2" />
        <ImageView
            android:id="@+id/historyView6"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView6"
            app:srcCompat="@drawable/ic_spiral_line2" />
        <ImageView
            android:id="@+id/historyView7"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView7"
            app:srcCompat="@drawable/ic_spiral_line2" />
        <ImageView
            android:id="@+id/historyView8"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView8"
            app:srcCompat="@drawable/ic_spiral_line2" />
        <ImageView
            android:id="@+id/historyView9"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/outOfRangeColor"
            android:contentDescription="@string/historyView9"
            app:srcCompat="@drawable/ic_spiral_line2" />

    </LinearLayout>


</LinearLayout>